# agent-terraform-cost-reviewer

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  README.md  agent.py  pyproject.toml  report.py  rubric.py  run.sh  tools.py
.github/workflows/: cost-review.yml
examples/bad_infra/: main.tf
examples/good_infra/: main.tf
terraform_cost_reviewer/: __init__.py  cli.py  hcl_parser.py  plan_parser.py  report.py  rubric.py  suppress.py  tools.py
