[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terraform-cost-reviewer"
version = "0.1.0"
description = "AI agent that finds architectural cost anti-patterns in Terraform codebases"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["terraform", "aws", "cost", "finops", "iac", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "anthropic>=0.40.0",
]

[project.scripts]
terraform-cost-review = "terraform_cost_reviewer.cli:main"

[project.urls]
Homepage = "https://github.com/wb-platform-engineering-lab/agent-terraform-cost-reviewer"
Repository = "https://github.com/wb-platform-engineering-lab/agent-terraform-cost-reviewer"
Issues = "https://github.com/wb-platform-engineering-lab/agent-terraform-cost-reviewer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["terraform_cost_reviewer*"]
